@@ -22,6 +22,16 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|Closeable
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|Random
@@ -81,6 +91,20 @@ operator|.
 name|logging
 operator|.
 name|LogFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|io
+operator|.
+name|IOUtils
 import|;
 end_import
 
@@ -1254,6 +1278,26 @@ argument_list|(
 literal|"Stop interrupted"
 argument_list|,
 name|e
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|sink
+operator|instanceof
+name|Closeable
+condition|)
+block|{
+name|IOUtils
+operator|.
+name|cleanup
+argument_list|(
+name|LOG
+argument_list|,
+operator|(
+name|Closeable
+operator|)
+name|sink
 argument_list|)
 expr_stmt|;
 block|}
